[Feature #166240828] Enable the users to fetch articles ratings
