# src/api/controllers/articleRatingController.js
@@ -1,8 +1,12 @@
-import model from '../models';
+import _ from 'lodash';
 import status from '../../helpers/constants/status.codes';
+import models, { sequelize } from '../models';
+import sendError from '../../helpers/error.sender';
+import calculateRatingsPercentage from '../../helpers/calculate.ratings.percentages';
+import errorMessages from '../../helpers/constants/error.messages';
+import generatePaginationDetails from '../../helpers/generate.pagination.details';
 
-const { Rating } = model;
-
+const { Rating, User } = models;
 
 /**
  *
@@ -23,7 +27,9 @@ class RatingsController {
   static async rateArticle(req, res) {
     const { slug } = req.params;
     const { rating } = req.body;
-    const { user: { id } } = req.user;
+    const {
+      user: { id }
+    } = req.user;
 
     Rating.create({
       userId: id,
@@ -34,6 +40,88 @@ class RatingsController {
       status: status.CREATED,
       message: `Rating for ${slug} submitted successfully`
     });
+  }
+
+  /**
+   * A controller to calculate the ratings percentages,
+   *
+   * @param {Object} req - the request object
+   * @param {Object} res - the result object
+   * @returns {Object} res
+   */
+  static async getArticleRatingStatistics(req, res) {
+    // Initialising variables
+    const result = {};
+    const { slug } = req.params;
+
+    // Fetching the articles count per rating
+    const ratingsCount = await Rating.findAll({
+      where: {
+        articleSlug: slug
+      },
+      group: ['rating'],
+      attributes: ['rating', [sequelize.fn('COUNT', 'TagName'), 'count']]
+    });
+
+    // Sending the result
+    if (_.isEmpty(ratingsCount)) {
+      // Error if there are no ratings for the article
+      sendError(status.NOT_FOUND, res, 'ratings', errorMessages.ratingsNotFound);
+      result.status = status.NOT_FOUND;
+    } else {
+      // Calculating the percentages
+      const ratingsWithPercentages = calculateRatingsPercentage(ratingsCount);
+
+      // sending the result back
+      result.status = status.OK;
+      result.data = ratingsWithPercentages;
+      res.status(status.OK).json(result);
+    }
+  }
+
+  /**
+   * A controller to get users for a given rating
+   * with pagination support
+   *
+   * @param {Object} req - the request object
+   * @param {Object} res - the result object
+   * @returns {Object} res
+   */
+  static async getRatingUsers(req, res) {
+    // Initialising variables
+    const result = {};
+    const { offset, limit } = req.query;
+    const { slug, rating } = req.params;
+
+    // Fetching data from the database
+    const ratingUsers = await User.findAndCountAll({
+      attributes: ['id', 'username', 'email', 'firstName', 'lastName'],
+      include: [
+        {
+          model: Rating,
+          where: {
+            articleSlug: slug,
+            rating
+          },
+          attributes: []
+        }
+      ],
+      offset,
+      limit
+    });
+
+    if (_.isEmpty(ratingUsers.rows)) {
+      sendError(status.NOT_FOUND, res, 'Data', 'No users fond for the provided entries');
+    } else {
+      // sending the result back
+      result.status = status.OK;
+      result.paginationDetails = generatePaginationDetails(ratingUsers.count,
+        ratingUsers.rows,
+        offset,
+        limit);
+      result.data = ratingUsers.rows;
+      res.status(status.OK).json(result);
+    }
   }
 }
 export default RatingsController;
