# src/docs/swagger.json
@@ -14,24 +14,15 @@
   },
   "host": "savage-rangers-ah-staging.herokuapp.com",
   "basePath": "/api",
-  "schemes": [
-    "https",
-    "http"
-  ],
+  "schemes": ["https", "http"],
   "paths": {
     "/users/signup": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Sign up new user",
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -58,17 +49,11 @@
     },
     "/users/login": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "login existing user",
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -98,18 +83,12 @@
     },
     "/users/facebook": {
       "get": {
-        "tags": [
-          "Users"
-        ],
-        "summary": [
-          "Register/login facebook users"
-        ],
+        "tags": ["Users"],
+        "summary": ["Register/login facebook users"],
         "description": [
           "Register/login a facebook user and fetch the user profile"
         ],
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "User successfully authenticated"
@@ -125,18 +104,12 @@
     },
     "/users/google": {
       "get": {
-        "tags": [
-          "Users"
-        ],
-        "summary": [
-          "Register/login google users "
-        ],
+        "tags": ["Users"],
+        "summary": ["Register/login google users "],
         "description": [
           "Register/login a google user and fetch the user profile"
         ],
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "User successfully authenticated"
@@ -152,18 +125,12 @@
     },
     "/users/twiter": {
       "get": {
-        "tags": [
-          "Users"
-        ],
-        "summary": [
-          "Register/login twitter users"
-        ],
+        "tags": ["Users"],
+        "summary": ["Register/login twitter users"],
         "description": [
           "Register/login a twitter user and fetch the user profile"
         ],
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "User successfully authenticated"
@@ -179,17 +146,11 @@
     },
     "/password-reset": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Reset the password of the user via email",
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -216,17 +177,11 @@
     },
     "/password-reset/{token}": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "check the link provided via email to a user for password reset",
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "path",
@@ -250,36 +205,36 @@
     },
     "/articles/{slug}/rating": {
       "post": {
-        "tags":["articles"],
+        "tags": ["articles"],
         "summary": "Rating a specific article based on its slug",
         "description": "Rating",
-        "produces":["application/json"],
-        "consumes":["application/json"],
-        "parameters":[
-            {
-              "in":"header",
-              "name":"authorization",
-              "description":"user token to verify",
-              "required":true
-            },
-            {
-              "in":"path",
-              "name":"slug",
-              "description":"slug to be used in rating an article",
-              "required":true
-            },
-            {
-              "in":"body",
-              "name":"rating",
-              "description":"update all of the body or any property among them",
-              "required":true
-            }
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "authorization",
+            "description": "user token to verify",
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "slug",
+            "description": "slug to be used in rating an article",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "rating",
+            "description": "update all of the body or any property among them",
+            "required": true
+          }
         ],
         "response": {
           "201": {
             "description": "Rating for ${slug} submitted successfully"
           },
-          "400":{
+          "400": {
             "description": "Sorry, you can not update this article twice with the same rating number, please update it"
           },
           "403": {
@@ -290,17 +245,11 @@
     },
     "/password-reset/update/{email}": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "update the password of the user after verification of the reset password link",
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "path",
@@ -336,12 +285,10 @@
     },
     "/users/signout": {
       "get": {
-        "tags": ["Users"],
+        "tags": ["auth"],
         "summary": "signs out the logged in user",
         "description": "drop the token",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "header",
@@ -370,17 +317,11 @@
     },
     "/articles": {
       "post": {
-        "tags": [
-          "Articles"
-        ],
+        "tags": ["Articles"],
         "summary": "Create article",
         "description": "create new article",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "header",
@@ -402,17 +343,11 @@
           }
         ],
         "get": {
-          "tags": [
-            "Profils"
-          ],
+          "tags": ["Profils"],
           "summary": "get the current user's profile",
           "description": "",
-          "produces": [
-            "application/json"
-          ],
-          "consumes": [
-            "application/json"
-          ],
+          "produces": ["application/json"],
+          "consumes": ["application/json"],
           "parameters": [
             {
               "in": "headers",
@@ -434,17 +369,11 @@
           }
         },
         "post": {
-          "tags": [
-            "Profils"
-          ],
+          "tags": ["Profils"],
           "summary": "update the user's profile",
           "description": "",
-          "produces": [
-            "application/json"
-          ],
-          "consumes": [
-            "application/json"
-          ],
+          "produces": ["application/json"],
+          "consumes": ["application/json"],
           "parameters": [
             {
               "in": "headers",
@@ -480,17 +409,11 @@
       },
       "/articles/{slug}": {
         "patch": {
-          "tags": [
-            "Articles"
-          ],
+          "tags": ["Articles"],
           "summary": "Update the article based on its current s-l-u-g",
           "description": "update article by slug",
-          "produces": [
-            "application/json"
-          ],
-          "consumes": [
-            "application/json"
-          ],
+          "produces": ["application/json"],
+          "consumes": ["application/json"],
           "parameters": [
             {
               "in": "header",
@@ -541,17 +464,11 @@
     },
     "/profiles/:username": {
       "get": {
-        "tags": [
-          "Profils"
-        ],
+        "tags": ["Profils"],
         "summary": "get another user's profile",
         "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "headers",
@@ -576,6 +493,23 @@
         }
       }
     },
+    "/articles/{slug}/ratings/statistics": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get all the ratings of an article",
+        "description": "",
+        "produces": ["application/json"],
+        "consumes": ["application/json"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "slug",
+            "description": "login existing user",
+            "required": true
+          }
+        ]
+      }
+    },
     "externalDocs": {
       "description": "Find out more about Swagger",
       "url": "http://swagger.io"
@@ -597,17 +531,11 @@
       },
       "/users/verifyEmail": {
         "get": {
-          "tags": [
-            "Users"
-          ],
+          "tags": ["Users"],
           "summary": "Verify user's email",
           "description": "",
-          "produces": [
-            "application/json"
-          ],
-          "consumes": [
-            "application/json"
-          ],
+          "produces": ["application/json"],
+          "consumes": ["application/json"],
           "parameters": [
             {
               "in": "path",
